# NNet

./: .coveragerc  .gitignore  .travis.yml  CMakeLists.txt  KerasTestNetwork.h5  LICENSE  README.md  exampleWrite.py  nnet2pb.py  pb2nnet.py  python_requirements.txt  requirements.txt  test_requirements.txt  writeNNet.py
.github/workflows/: CI.yml  ci.yml  python-package-conda.yml
converters/: keras2nnet.py  nnet2onnx.py  nnet2pb.py  onnx2nnet.py  pb2nnet.py
cpp/: main.cpp  nnet.cpp  nnet.h
examples/: example.py  example_nnet2onnx.py  example_nnet2pb.py  example_onnx2nnet.py  example_pb2nnet.py  keras2nnet.py
julia/: Project.toml  example.jl  nnet.jl
nnet/: TestNetwork2.onnx  TestNetwork2.pb
python/: example.py  nnet.py
readNNet/cpp/: TestNetwork.nnet  main.cpp  nnet.cpp  nnet.h
readNNet/julia/: example.jl  nnet.jl
readNNet/python/: example.py
scripts/: Keras2nnet.py  nnet2pb.py  pb2nnet.py  writeNNet.py
test/: TestConverter_ONNX.py  test_converters.py  test_converters_onnx2nnet.py  test_converters_pb.py  test_cpp.cpp  test_nnet.py  test_utils.py
utils/: normalizeNNet.py  readNNet.py  writeNNet.py
